--- a/_posts/2022-08-20-web-music.md
+++ b/_posts/2022-08-20-web-music.md
@@ -1,6 +1,6 @@
 ---
 layout:post
-title: Web-based music player
+title: "Web-based music player"
 date: 2022-08-20 08:00:00 -0500
 categories: web
 tags: homelab web
